# CrewAI_PoemFlow

./: README.md  poem.txt  pyproject.toml
src/poem_creator/: main.py
