[project]
name = "poem_creator"
version = "0.1.0"
description = "poem_creator using crewAI"
aauthors = [{ name = "M A Qadir", email = "aqadir100@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "poem_creator.main:kickoff"
plot = "poem_creator.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
